--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 // @import url("http://fonts.googleapis.com/css?family=Ubuntu:wght@300;400;500;700&display=swap");
-@import url('https://fonts.cdnfonts.com/css/gotham:wght@300;400;500;700&display=swap');
+@import url('https://fonts.cdnfonts.com/css/gotham');
 
 $white: #fff;
 $primary: #287bff;
