Added new components and routerLink

--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -8,8 +8,9 @@
         </a>
       </li>
       <ng-container *ngFor="let item of items">
-        <li (click)="select(item.id)" [ngClass]="{'selected': item.on}">
-          <a href="#">
+        <!-- <li [routerLink]="{{item.link}}" (click)="select(item.id)" [ngClass]="{'selected': item.on}"> -->
+          <li (click)="select(item.id)" [ngClass]="{'selected': item.on}">
+          <a [routerLink]="[item.link]">
             <span class="icon material-icons">{{item.icon}}</span>
             <span class="title">{{item.name}}</span>
           </a>
