Added details on title and pages

--- a/src/app/page-one/page-one.component.html
+++ b/src/app/page-one/page-one.component.html
@@ -1,4 +1,4 @@
-<h1>page-one works!</h1>
+<h1>MENU 1</h1>
 
 <div style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-evenly;">
   <app-card-tag-horizontal></app-card-tag-horizontal>
